annotations added in medium
